# slack_survey_bot

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  main.py  scripts.py
.github/workflows/: docker-build.yml
app/: audit.py  custom_exceptions.py  db.py  slack_bot.py
bot/: Dockerfile  Makefile  audit.py  buttons.py  custom_exceptions.py  db.py  main.py  modal_windows.py  pyproject.toml  slack_bot.py
bot/handlers/: base.py  common.py  survey.py  user_lists.py
bot/migrations/: env.py
bot/migrations/versions/: 2026_01_24_1814-7357facf0367_add_admins_users.py  2026_01_28_1956-8592e3e25d92_delete_email_field.py  2026_01_31_2238-dac0507e3b5d_add_survey_and_survey_response_table.py  2026_02_04_0022-0911d89b7f9d_add_user_lists.py  2026_02_04_0154-6fad2049bd07_add_survey_text.py  2026_02_04_0240-37b7b076d2ee_add_user_lists.py  2026_02_10_2012-82ca763c7321_add.py  2026_02_14_0327-f15d956d1043_.py  2026_02_17_0201-01f086b1d5f2_change_int_to_float.py  2026_02_17_0324-a1b2c3d4e5f6_add_survey_reminder_fields.py
bot/services/: reminder_service.py
bot/services/admin/: main.py
bot/services/admin_handler/: main.py
bot/services/slack_block_handler/: __init__.py  survey_control.py  survey_creation.py  survey_response.py  users_lists_control.py
bot/services/survey_handler/: main.py
bot/services/user_handler/: main.py
bot/services/users_lists_handler/: main.py
shared/schemas/: base_models.py  surveys.py  user_lists.py  users.py
shared/utils/: logger.py
tests/: test_db.py
(+17 files in other folders)
